# CellworldServer

./: .gitignore  .gitmodules  README.md  requirements.txt
Resources/Scripts/: todo.txt
main/cpp/: .gitignore  CMakeLists.txt  pClient.py  perf_report.html
main/cpp/git-dependencies/cellworld_experiment_service/: CMakeLists.txt
main/cpp/git-dependencies/cellworld_experiment_service/catchtests/: client_test.cpp
main/cpp/git-dependencies/cellworld_experiment_service/include/: experiment.h
main/cpp/git-dependencies/cellworld_experiment_service/include/experiment/: experiment_client.h  experiment_messages.h  experiment_service.h
main/cpp/git-dependencies/cellworld_experiment_service/python/: __info__.py  build.py  client_test.py  service_test.py  terminal.py
main/cpp/git-dependencies/cellworld_experiment_service/python/setup/: setup.cfg
main/cpp/git-dependencies/cellworld_experiment_service/src/: experiment_client.cpp  experiment_service.cpp
main/cpp/git-dependencies/cellworld_experiment_service/src/tools/: server.cpp
main/cpp/git-dependencies/dependency_catch/: CMakeLists.txt
main/cpp/git-dependencies/dependency_catch/Resources/: catchtests.cpp
main/cpp/git-dependencies/dependency_catch/include/: catch.h
main/cpp/git-dependencies/dependency_catch/src/: catch-main.cpp
main/cpp/git-dependencies/dependency_perf-analysis/: CMakeLists.txt
main/cpp/git-dependencies/dependency_perf-analysis/include/: performance.h
main/cpp/git-dependencies/dependency_perf-analysis/src/: performance.cpp
main/cpp/git-dependencies/dependency_requests/: CMakeLists.txt
main/cpp/git-dependencies/dependency_requests/include/: request.h  response.h
main/cpp/git-dependencies/dependency_requests/src/: request.cpp  response.cpp
main/cpp/include/: vr_client.h  vr_server.h
main/cpp/robot_controller/: cudatest.py  gametester.py  latest_main.py  main copy.py  main.py  main_og.py  mylog.py  new.py  test.py  version1.py
main/cpp/src/: main.cpp  main_client.cpp  vr_client.cpp  vr_server.cpp
main/logs/: VR_20240422_1825_vr_dude_21_05_suffix_experiment.json  VR_20240422_2055_vr_dude_21_05_suffix_experiment.json  VR_20240422_2100_vr_dude_21_05_suffix_experiment.json  VR_20240422_2106_vr_dude_21_05_suffix_experiment.json  VR_20240423_1342_vr_dude_21_05_suffix_experiment.json  VR_20240423_1400_vr_dude_21_05_suffix_experiment.json  VR_20240423_1422_vr_dude_21_05_suffix_experiment.json  test_20240517_1655_alexander_21_05_test_experiment.json
main/python/: .gitignore  README.md  activate.sh  requirements.txt
main/python/logs/: VR_20240422_1431_vr_dude_21_05_suffix_experiment.json  VR_20240422_1434_vr_dude_21_05_suffix_experiment.json  VR_20240422_1438_vr_dude_21_05_suffix_experiment.json  VR_20240422_1450_vr_dude_21_05_suffix_experiment.json  VR_20240422_1453_vr_dude_21_05_suffix_experiment.json  VR_20240422_1458_vr_dude_21_05_suffix_experiment.json  VR_20240422_1459_vr_dude_21_05_suffix_experiment.json  VR_20240422_1501_vr_dude_21_05_suffix_experiment.json  VR_20240422_1503_vr_dude_21_05_suffix_experiment.json  VR_20240424_1329_vr_dude_21_05_suffix_experiment.json  VR_20240424_1336_vr_dude_21_05_suffix_experiment.json  VR_20240424_1340_vr_dude_21_05_suffix_experiment.json  VR_20240424_1345_vr_dude_21_05_suffix_experiment.json  VR_20240424_1348_vr_dude_21_05_suffix_experiment.json  VR_20240424_1351_vr_dude_21_05_suffix_experiment.json  VR_20240424_1401_vr_dude_21_05_suffix_experiment.json  VR_20240424_1404_vr_dude_21_05_suffix_experiment.json  VR_20240424_1405_vr_dude_21_05_suffix_experiment.json  VR_20240424_1410_vr_dude_21_05_suffix_experiment.json  VR_20240424_1415_vr_dude_21_05_suffix_experiment.json  VR_20240424_1419_vr_dude_21_05_suffix_experiment.json  VR_20240424_1428_vr_dude_21_05_suffix_experiment.json  VR_20240424_1433_vr_dude_21_05_suffix_experiment.json  VR_20240424_1440_vr_dude_21_05_suffix_experiment.json  VR_20240424_1521_vr_dude_21_05_suffix_experiment.json  VR_20240424_1523_vr_dude_21_05_suffix_experiment.json  VR_20240424_1612_vr_dude_21_05_suffix_experiment.json  VR_20240424_1709_vr_dude_21_05_suffix_experiment.json  VR_20240424_1710_vr_dude_21_05_suffix_experiment.json  VR_20240425_1716_vr_dude_21_05_suffix_experiment.json  VR_20240425_1722_vr_dude_21_05_suffix_experiment.json  VR_20240425_1727_vr_dude_21_05_suffix_experiment.json  VR_20240425_1728_vr_dude_21_05_suffix_experiment.json  VR_20240425_1739_vr_dude_21_05_suffix_experiment.json  VR_20240425_1741_vr_dude_21_05_suffix_experiment.json  VR_20240425_1745_vr_dude_21_05_suffix_experiment.json  VR_20240425_1747_vr_dude_21_05_suffix_experiment.json  VR_20240425_1754_vr_dude_21_05_suffix_experiment.json  VR_20240425_1807_vr_dude_21_05_suffix_experiment.json  VR_20240425_1809_vr_dude_21_05_suffix_experiment.json  (+5 more)
main/python/src/: BotEvadeClient.py  Client.py  ControllerServerTest.py  Server.py  cppClient.py  pClient.py  test.py
python/: botevadevr.py  classified.md  main copy.py  main.py  main_v2.py  modelvr.py  mousevr.py  pavtest.py  txt.txt  vr_model.py  vr_options.py  vr_server.py
python/logs/: walk_02072025_092311.json
python/pypavlok/python/: main.py  search_ble.py  test.ipynb  test.json  test.py
python/tasks/: botevadevr.py
python/tests/: PolygonLib.py  basic_client.py  client.py  coordinate_conversion.ipynb  coordinate_conversion.py  cudatest.py  measurements_04182025_095348.json  parsed_data.csv  pavtest.py  pointtest.py  server.py  tensors.py  test.py  test_peaking.py  tester.py
python/tests/data/: cellworld_vr_lab_parsed.csv  cellworld_vr_larger_parsed.csv  cellworld_vr_latest_entryexit_rightside_parsed.csv  cellworld_vr_latest_parsed.csv  parsed_data_og.csv
python/tools/: controller_mouse.py  experiment_options.py  experiment_replay_client.py  json_to_csv.ipynb  logger.py  model_copy.py  mylog.py  networking.py  peaking.py  vrcoordinateconverter.py
python/visualization/: plotting.ipynb
scripts/: call_killport.py  enable_admin_execution.ps1  enable_inbound_port_firewall.ps1  get_process_ip_rc.bat  killport.ps1  run_killport_asadmin.ps1  wsl-port-forwarding.ps1
(+70 files in other folders)
